--- a/assets/style.css
+++ b/assets/style.css
@@ -51,3 +51,44 @@
     align-items: center;
     justify-content: center;
 }
+
+/* Medium devices (tablets, 768px and up) */
+@media (min-width: 768px) {
+    .fs-md-4 {
+       font-size: calc(1.275rem + .3vw)!important;
+    }
+}
+
+/**/
+.talk-bubble {
+    display: inline-block;
+    position: relative;
+	height: auto;
+	background-color: #FFFFFF;
+}
+.border{
+  border: 8px solid #666;
+}
+.tri-right.border.btm-right-in:before {
+	content: ' ';
+	position: absolute;
+	width: 0;
+	height: 0;
+    left: auto;
+	right: -1px;
+	bottom: -20px;
+	border: 10px solid;
+	border-color: var(--bs-border-color) var(--bs-border-color) transparent transparent;
+}
+.tri-right.btm-right-in:after{
+	content: ' ';
+	position: absolute;
+	width: 0;
+	height: 0;
+    left: auto;
+	right: 0;
+	bottom: -18px;
+	border: 9px solid;
+	border-color: var(--color-white) var(--color-white) transparent transparent;
+}
+
