--- a/assets/style.css
+++ b/assets/style.css
@@ -3,6 +3,7 @@
     --color-black: #000000;
     --color-white: #FFFFFF;
     --color-gray: #d7d6d4;
+    --color-yellow: #fffef2;
     --bs-font-sans-serif: "Roboto Slab";
 }
 
@@ -16,6 +17,10 @@
 
 .bg-gray {
     background: var(--color-gray) !important;
+}
+
+.bg-yellow {
+    background: var(--color-yellow) !important;
 }
 
 .color-primary {
@@ -50,6 +55,11 @@
     border-color: var(--color-primary);
 }
 
+.form-check-input:checked {
+    background-color: var(--color-primary);
+    border-color: var(--color-primary);
+}
+
 .card {
     min-height: 377px;
 }
@@ -74,6 +84,11 @@
     bottom: 0;
     z-index: 99;
     transition: all 0.5s ease;
+}
+
+.section-heading > .container > .row {
+    background: var(--color-primary);
+    color: var(--color-white);
 }
 
 /* Medium devices (tablets, 768px and up) */
