--- a/assets/style.css
+++ b/assets/style.css
@@ -1,158 +1,176 @@
 :root {
-    --color-primary: #a18866;
-    --color-black: #000000;
-    --color-white: #FFFFFF;
-    --color-gray: #d7d6d4;
-    --color-yellow: #fffef2;
-    --bs-font-sans-serif: "Roboto Slab";
+  --color-primary: #a18866;
+  --color-black: #000000;
+  --color-white: #ffffff;
+  --color-gray: #d7d6d4;
+  --color-yellow: #fffef2;
+  --bs-font-sans-serif: "Roboto Slab";
 }
 
 .bg-primary {
-    background: var(--color-primary) !important;
+  background: var(--color-primary) !important;
 }
 
 .bg-white {
-    background: var(--color-white) !important;
+  background: var(--color-white) !important;
 }
 
 .bg-gray {
-    background: var(--color-gray) !important;
+  background: var(--color-gray) !important;
 }
 
 .bg-yellow {
-    background: var(--color-yellow) !important;
+  background: var(--color-yellow) !important;
 }
 
 .color-primary {
-    color: var(--color-primary) !important;
+  color: var(--color-primary) !important;
 }
 
 .color-white {
-    color: var(--color-white) !important;
+  color: var(--color-white) !important;
 }
 
 .color-black {
-    color: var(--color-black) !important;
+  color: var(--color-black) !important;
 }
 
 .font-roboto {
-    font-family: "Roboto";
+  font-family: "Roboto";
 }
 
 .up-4 {
-    margin-top: -24px !important;
+  margin-top: -24px !important;
 }
 
 .bl {
-    border-left: 1px solid #000;
+  border-left: 1px solid #000;
 }
 
-.btn, .card, .card-img, .card-img-top, .form-control {
-    border-radius: 0;
+.btn,
+.card,
+.card-img,
+.card-img-top {
+  border-radius: 0;
 }
 
-.form-control {
-    border-color: var(--color-primary);
+.form-control,
+.form-check-input,
+.form-select {
+  border-color: var(--color-primary) !important;
+  border-radius: 0 !important;
 }
 
 .form-check-input:checked {
-    background-color: var(--color-primary);
-    border-color: var(--color-primary);
+  background-color: var(--color-primary);
+  border-color: var(--color-primary);
 }
 
 .card {
-    min-height: 377px;
+  min-height: 377px;
 }
 
 .card-body {
-    display: flex;
-    align-items: center;
-    justify-content: center;
+  display: flex;
+  align-items: center;
+  justify-content: center;
 }
 
 .ask-seller-chat {
-    position: relative;
-    height: 500px;
-    overflow: hidden;
+  position: relative;
+  height: 500px;
+  overflow: hidden;
 }
 
 .read-more-container {
-    background: rgb(255,254,242);
-    background: linear-gradient(0deg, rgba(255,254,242,1) 0%, rgba(255,254,242,1) 50%, rgba(255,254,242,0) 100%);
-    height: 100px;
-    position: absolute;
-    bottom: 0;
-    z-index: 99;
-    transition: all 0.5s ease;
+  background: rgb(255, 254, 242);
+  background: linear-gradient(
+    0deg,
+    rgba(255, 254, 242, 1) 0%,
+    rgba(255, 254, 242, 1) 50%,
+    rgba(255, 254, 242, 0) 100%
+  );
+  height: 100px;
+  position: absolute;
+  bottom: 0;
+  z-index: 99;
+  transition: all 0.5s ease;
 }
 
 .section-heading > .container > .row {
-    background: var(--color-primary);
-    color: var(--color-white);
+  background: var(--color-primary);
+  color: var(--color-white);
+}
+
+.img-uploader {
+  background-repeat: no-repeat;
+  background-position: center;
+  background-size: contain;
 }
 
 /* Medium devices (tablets, 768px and up) */
 @media (min-width: 768px) {
-    .fs-md-4 {
-       font-size: calc(1.275rem + .3vw)!important;
-    }
+  .fs-md-4 {
+    font-size: calc(1.275rem + 0.3vw) !important;
+  }
 }
 
 /**/
 .talk-bubble {
-    display: inline-block;
-    position: relative;
-	height: auto;
-	background-color: #FFFFFF;
+  display: inline-block;
+  position: relative;
+  height: auto;
+  background-color: #ffffff;
 }
-.border{
-  border: 1px solid var(--color-primary)!important;
+.border {
+  border: 1px solid var(--color-primary) !important;
 }
 .tri-right.border.btm-right-in:before {
-	content: ' ';
-	position: absolute;
-	width: 0;
-	height: 0;
-    left: auto;
-	right: -1px;
-	bottom: -20px;
-	border: 10px solid;
-	border-color: var(--color-primary) var(--color-primary) transparent transparent;
+  content: " ";
+  position: absolute;
+  width: 0;
+  height: 0;
+  left: auto;
+  right: -1px;
+  bottom: -20px;
+  border: 10px solid;
+  border-color: var(--color-primary) var(--color-primary) transparent
+    transparent;
 }
-.tri-right.btm-right-in:after{
-	content: ' ';
-	position: absolute;
-	width: 0;
-	height: 0;
-    left: auto;
-	right: 0;
-	bottom: -18px;
-	border: 9px solid;
-	border-color: var(--color-white) var(--color-white) transparent transparent;
+.tri-right.btm-right-in:after {
+  content: " ";
+  position: absolute;
+  width: 0;
+  height: 0;
+  left: auto;
+  right: 0;
+  bottom: -18px;
+  border: 9px solid;
+  border-color: var(--color-white) var(--color-white) transparent transparent;
 }
 .talk-bubble.tri-left {
-    background: transparent;
+  background: transparent;
 }
 .tri-left.border.btm-left-in:before {
-	content: ' ';
-	position: absolute;
-	width: 0;
-	height: 0;
-    right: auto;
-	left: -1px;
-	bottom: -20px;
-	border: 10px solid;
-	border-color: var(--color-primary) transparent transparent var(--color-primary);
+  content: " ";
+  position: absolute;
+  width: 0;
+  height: 0;
+  right: auto;
+  left: -1px;
+  bottom: -20px;
+  border: 10px solid;
+  border-color: var(--color-primary) transparent transparent
+    var(--color-primary);
 }
-.tri-left.btm-left-in:after{
-	content: ' ';
-	position: absolute;
-	width: 0;
-	height: 0;
-    right: auto;
-	left: 0;
-	bottom: -18px;
-	border: 9px solid;
-	border-color: var(--color-white) transparent transparent var(--color-white);
+.tri-left.btm-left-in:after {
+  content: " ";
+  position: absolute;
+  width: 0;
+  height: 0;
+  right: auto;
+  left: 0;
+  bottom: -18px;
+  border: 9px solid;
+  border-color: var(--color-white) transparent transparent var(--color-white);
 }
-
